turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:21: error: not found: value leveCraton
    leveCraton()
    ^